8071501: perfMemory_solaris.cpp failing to compile with "Error: dd_fd is not a member of DIR."

Force all Solaris builds to use the same version of the DIR structure.

Reviewed-by: dcubed, dholmes, kvn